--- a/.github/workflows/data-collection.yml
+++ b/.github/workflows/data-collection.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: Create Output Directories
       run: |
-        mkdir -p data/county-council data/emergency data/logs
+        mkdir -p data/county-council data/emergency data/videos data/logs logs
 
     - name: Run County Council Scraper
       env:
