--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ selenium==4.15.2
 requests==2.31.0
 pandas==2.1.3
 lxml==4.9.3
+feedparser==6.0.11
 yt-dlp==2023.11.16
 openai-whisper==20231117
 openai==1.3.7
