Implement comprehensive Howard County data source configuration
🎯 Added drop-in JSON config (config/sources.hoco.mvp.json) with 12 data sources:
   - Government: Council (Granicus + hearings), Planning Board
   - Schools: HCPSS Board Calendar
   - Community: Recreation & Parks, Library System events
   - Business: Economic Development, Chamber of Commerce
   - Public Safety: Police & Fire/Rescue news
   - Health: Health Department news
   - Executive: County Executive Ball Bulletin

🔧 Created Universal Scraper (scrapers/universal-scraper.py):
   - Configuration-driven scraping for all source types
   - Handles RSS discovery, HTML lists/tables, ICS calendars
   - Automatic selector fallbacks and debug HTML snapshots
   - Fail-safe error handling per source

📋 Strategies implemented:
   - discover_rss_on_page: Find RSS feeds on landing pages
   - scrape_list: Parse HTML lists/tables with CSS selectors
   - follow_event_then_download_ics: Crawl events for calendar files
   - discover_ics_subscribe_link: Find calendar subscription links

🚀 Updated GitHub Actions workflow:
   - Primary: Universal scraper for all 12 sources
   - Test run: Priority 3 sources (Granicus, HCPSS, Library)
   - Fallback: Legacy individual scrapers if universal fails

📊 Added test script for validation:
   - Test priority sources (hoco_council_granicus, hcpss_board_calendar, hcls_events)
   - Validate selectors are finding elements
   - Debug HTML snapshots for quick selector fixes

Next: Run dry crawl on priority sources to verify pipelines

--- a/.github/workflows/data-collection.yml
+++ b/.github/workflows/data-collection.yml
@@ -35,31 +35,37 @@ jobs:
 
     - name: Create Output Directories
       run: |
-        mkdir -p data/county-council data/emergency data/videos data/logs logs
+        mkdir -p data/county-council data/emergency data/videos data/universal data/logs logs
 
-    - name: Run County Council Scraper
+    - name: Run Universal Scraper - All Sources
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
-      run: |
-        python scrapers/county-council-scraper.py
-        
-    - name: Run Emergency Alert Monitor
-      env:
-        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+        YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
         TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
         TWILIO_AUTH_TOKEN: ${{ secrets.TWILIO_AUTH_TOKEN }}
         SENDGRID_API_KEY: ${{ secrets.SENDGRID_API_KEY }}
       run: |
-        python scrapers/emergency-alert-monitor.py
+        python scrapers/universal-scraper.py
         
-    - name: Run Video Discovery
+    - name: Run Universal Scraper - Test Priority Sources
       env:
-        YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+        YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
       run: |
-        python scrapers/video-discovery.py
+        python scrapers/universal-scraper.py "hoco_council_granicus,hcpss_board_calendar,hcls_events"
+        
+    - name: Run Legacy Scrapers (Fallback)
+      if: failure()
+      env:
+        OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+        YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
+      run: |
+        python scrapers/county-council-scraper.py || echo "County council scraper failed"
+        python scrapers/emergency-alert-monitor.py || echo "Emergency monitor failed"
+        python scrapers/video-discovery.py || echo "Video discovery failed"
 
     - name: Validate Scraped Data
       run: |
