🔧 Fix GitHub Actions validation step
- Add required --source argument to validate-data.py script
- Set source to 'universal' to match new scraper data directory
- Resolves exit code 2 error in data validation step

--- a/.github/workflows/data-collection.yml
+++ b/.github/workflows/data-collection.yml
@@ -70,7 +70,7 @@ jobs:
     - name: Validate Scraped Data
       run: |
         if [ -f "scripts/validate-data.py" ]; then
-          python scripts/validate-data.py
+          python scripts/validate-data.py --source universal
         else
           echo "Validation script not found, skipping validation..."
         fi
